--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -23,91 +23,9 @@
 }
 
 body {
-  background-color: #FFFAF8; /* Set your desired background color here */
+  background-color: #FFFAF8; 
   color: var(--txtColorDark); 
 }
-
-/* .navbar {
-  background: none;
-  height: 75px;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-.menu-bars {
-  margin-left: 1rem;
-  font-size: 2rem;
-  background: none;
-  color: var(--txtColorMedium);
-}
-
-.nav-menu {
-  background-color: var(--bgColorDark);
-  font-size: large;
-  width: 400px;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  position: fixed;
-  top: 0;
-  left: -100%;
-  transition: 850ms;
-}
-
-.nav-menu.active {
-  left: 0;
-  background-color: var(--componentColorDark);
-  transition: 450ms;
-  z-index: 2;
-  /* position: relative;  
-}
-
-.nav-text {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  padding: 8px 0px 8px 16px;
-  list-style: none;
-  height: 60px;
-}
-
-.nav-text a {
-  text-decoration: none;
-  color: var(--txtColorMedium);
-  font-size: 20px;
-  font-weight: 500;
-  width: 95%;
-  height: 100%;
-  display:inline;
-  align-items: center;
-  padding: 8 16px;
-  border-radius: 5px;
-}
-
-.nav-text a:hover {
-  background-color: var(--sidebarHoverColor);
-  color: var(--txtColorDark);
-}
-
-.nav-menu-items {
-  width: 100%;
-  text-align: center;
-}
-
-.navbar-toggle {
-  background-color: var(--componentColorDark);
-  color: var(--txtColorLight);
-  width: 100%;
-  height: 80px;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-} */
-
-/* span {
-  margin-left: 16px;
-} */
 
 .transparent-input {
   background-color:  var(--inputColor);
@@ -116,7 +34,6 @@ body {
   width: 300px;
   padding: 5px; 
   align-items: right;
-  /* Add any other styling for the input field */
 }
 
 
@@ -144,8 +61,8 @@ button:hover {
 }
 
 .profile-container {
-  justify-content: center; /* Horizontally center */
-  align-items: center; /* Vertically center */
+  justify-content: center; 
+  align-items: center;  
   width: 500px;
   background-color: var(--inputColor);
   border-radius: 4px;
@@ -157,21 +74,21 @@ button:hover {
 }
 
 .button-link {
-  text-decoration: none;
-  color: inherit
+    text-decoration: none;
+    color: inherit
 }
 
 .detail {
-  color: #4444449e;
+    color: #4444449e;
 }
 
 .top-navigation-bar {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  width: 95%;
-  margin: 2em auto; 
-  gap: 20px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 95%;
+    margin: 2em auto; 
+    gap: 20px;
 }
 
 .profile-icon {
