--- a/frontend/src/styles/Challenge.css
+++ b/frontend/src/styles/Challenge.css
@@ -1,7 +1,6 @@
 .challenge-div {
     width: 100%;
     height: 100%;
-    /* padding-top: 25px; */
     padding-bottom: 40px;
     padding-left: 30px;
     padding-right: 29px;
@@ -51,9 +50,7 @@
 }
 
 .challenge-section {
-    /* border: 2px #9747FF solid; */
     border-radius: 10px;
-    /* background: #e3d2fc; */
     width: 100%;
     padding: 10px;
 }
@@ -64,7 +61,6 @@
 }
 
 .challenge-choices {
-    /* border: 2px #9747FF solid; */
     border-radius: 10px;
     background: #e3d2fc;
     width: 50%;
@@ -88,9 +84,7 @@
 
 .answer-text-area {
     width: 100%;
-    /* height: 100px; */
     padding: 20px;
-    /* font-family: 'IBM Plex Mono', monospace; */
     font-size: 18px;
     border-radius: 10px;
     border: 1px #CECECE solid;
@@ -99,18 +93,16 @@
 
 .ai-options {
     display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
-    /* text-align: center; */
-    width: 100%; /* Adjust as needed */
-    margin: 20px auto; /* Center horizontally by auto margins */
+    justify-content: center; 
+    align-items: center; 
+    width: 100%;  
+    margin: 20px auto;  
     border: 1px #c8c7c7 solid;
     border-radius: 10px;
     padding-left: 30px;
     padding-right: 29px;
     padding-top: 10px;
     padding-bottom: 10px;
-    /* padding-bottom: 20px; */
     gap: 20px;
     background-color: #FFFAF8;
 
