--- a/frontend/src/styles/Profile.css
+++ b/frontend/src/styles/Profile.css
@@ -16,19 +16,13 @@
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
-    /* gap: 20px; */
     justify-content: space-between;
-    /* align-items: center; */
 }
 
 .email-and-name h3 {
     font-size: 12px;
     font-weight: normal;
 }
-
-/* .detail {
-    color: #3E3E3E;
-} */
 
 .preferences-container {
     width: 70%;
@@ -60,12 +54,11 @@
 }
 
 .percentages span {
-    font-size: 12px; /* Adjust the font size as needed */
+    font-size: 12px;  
 }
 
 .progress-line-container{
     display: flex;
-    /* gap: 10px; */
     align-items: center;
 }
 
@@ -84,19 +77,15 @@
 }
 
 .progress-line {
-    /* border-radius: 5px; Rounded corners */
     position: relative;
-    /* top: 0; */
-    /* transform: translateX(-50%); */
-    /* background-color: red; Indicator color */
-    width: 100%; /* Indicator width */
-    height: 10px; /* Same height as the bar */
-  }
+    width: 100%; 
+    height: 10px;  
+}
 
 .red {
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
-    background-color: #A7B82C;    ;
+    background-color: #A7B82C;    
 }
 
 .green {
